--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/8ExBy4S4nl/Sr-Business-Data-Analyst-Mountain-View-CA'>Sr. Business Data Analyst (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/8ExBy4S4nl/Sr-Business-Data-Analyst-Mountain-View-CA'>Sr. Business Data Analyst (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -187,11 +187,11 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p>Oct 16, 2019 ... Provides technical leadership through incorporation of best practices around 
 data modeling, ETL and report development and mentors others on the best?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/institute-on-aging/job/o5lpbfwK'>Institute on Aging Careers - Manager, Business Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/institute-on-aging/job/o5lpbfwK'>Institute on Aging Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -252,11 +252,11 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -270,7 +270,7 @@ using?...</p>
 <p><span class="badge badge-light">Luxembourg Luxembourg</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
+<h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -351,7 +351,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Austin Austin Austin</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -395,7 +395,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bill/5348d0e5-f486-46bd-be0b-a89d6a21597e'>Bill.com - Business Intelligence Analyst - Contractor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/5348d0e5-f486-46bd-be0b-a89d6a21597e'>Bill.com - Business Intelligence Analyst - Contractor</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -436,7 +436,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=ok9Kafw7&__jvst=Employee+Referral&__jvsd=sfvEdgwm&__jvsc=Twitter&bid=nPgOeMwo'>GroupM EMEA Careers - Business Intelligence Developer, Neo Media World</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=ok9Kafw7&__jvst=Employee+Referral&__jvsd=sfvEdgwm&__jvsc=Twitter&bid=nPgOeMwo'>GroupM EMEA Careers - Business Intelligence Developer, Neo Media World</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
