--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://so1.join.com/jobs/466171-junior-devops-engineer-m-f-x-onsite-remote'>Job @ SO1 (Remote): Junior DevOps Engineer (m/f/x)... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
+<h5><a href='https://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -90,7 +94,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -142,7 +146,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oQpmafwv&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nSeIlMwq'>NICE Actimize Careers - Specialist DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oQpmafwv&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nSeIlMwq'>NICE Actimize Careers - Specialist DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -202,7 +206,7 @@
 <p><span class="badge badge-light">Galway</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803379'>Job Application for Senior DevOps Engineer - Singapore Based  at foodpanda Philippines</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803379'>Job Application for Senior DevOps Engineer - Singapore Based  at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -223,7 +227,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/integrate/db73405c-c284-42d5-bc20-fb5a260e0801'>Integrate - DevOps Engineer (Lead)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/integrate/db73405c-c284-42d5-bc20-fb5a260e0801'>Integrate - DevOps Engineer (Lead)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -295,7 +299,7 @@ of?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://proposify.applytojob.com/apply/CezF4wWP60/DevOps-Engineer'>DevOps Engineer - Proposify - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proposify.applytojob.com/apply/CezF4wWP60/DevOps-Engineer'>DevOps Engineer - Proposify - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -317,7 +321,7 @@ of?...</p>
 <p><span class="badge badge-light">Chicago, IL  ?  Chicago</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ateeca/743999698152332-devops-engineer'>ateeca DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ateeca/743999698152332-devops-engineer'>ateeca DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -325,7 +329,7 @@ of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -409,7 +413,7 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/e87fb6ef-db41-4365-a355-686629562bb5'>Stride Health - Director of Security DevOps (SecDevOps)</a></h5> 
+<h5><a href='https://jobs.lever.co/stridehealth/e87fb6ef-db41-4365-a355-686629562bb5'>Stride Health - Director of Security DevOps (SecDevOps)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -449,10 +453,6 @@ strive for the best build and deploy experience that we can offer our developer?
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogKhafwb&__jvst=Employee+Referral&__jvsd=s1Nspgwq&__jvsc=Twitter&bid=niW0jMwO'>ServiceNow Careers - Backend Developer (DevOps Orientation)</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/ansira/4e468bfd-b2b9-4d6f-80f3-9a2463a251a1'>Ansira - DevOps Engineer</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
-<p>Posted on: 2019-10-24</p>
 <hr/>
 
 
