--- a/software.html
+++ b/software.html
@@ -39,12 +39,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://coinjobs.org/job/senior-software-engineer-ripplenet-at-ripple/'>Senior Software Engineer, RippleNet at Ripple ? CoinJobs</a></h5> 
+<h5><a href='http://jobs.jobvite.com/j2-global/job/olsnbfw5'>J2 Global Careers - Java - Cloud Software Developer - Vipre</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://coinjobs.org/job/senior-software-engineer-ripplenet-at-ripple/'>Senior Software Engineer, RippleNet at Ripple ? CoinJobs</a></h5> 
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/okIpbfwm'>The Climate Corporation Careers - Intern: Software Engineer in Test (Summer 2020)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/tealium/75baeb2b-94a5-4d89-b746-9afa7227c02f'>Tealium - Software Engineer - Data Platform - Java</a></h5> 
@@ -67,7 +71,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698344147-senior-net-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698344147-senior-net-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -115,7 +119,7 @@
 <p><span class="badge badge-light">Pittsburgh Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=n9wNmMw5'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=n9wNmMw5'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1930866'>Job Application for Senior Software Engineer, Intelligence Platform at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1930866'>Job Application for Senior Software Engineer, Intelligence Platform at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -199,7 +203,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698263336-software-engineer-new-graduates-last-year-students-'>RAKUNA Software Engineer (New Graduates, Last Year Students) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698263336-software-engineer-new-graduates-last-year-students-'>RAKUNA Software Engineer (New Graduates, Last Year Students) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -283,7 +287,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oyza8fw9&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n62smMwd'>Gigamon Careers - Senior Staff Software Engineer - API &amp; Backend</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oyza8fw9&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n62smMwd'>Gigamon Careers - Senior Staff Software Engineer - API &amp; Backend</a></h5> 
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -403,7 +407,7 @@ looking?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -445,12 +449,6 @@ media for tomorrow, too. We're creators and coders, dreamers and doers creating
 <hr/>
 <h5><a href='https://assistrcare.join.com/jobs/455116-embedded-software-engineer'>Job @ AssistMe (Berlin): Embedded Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://Ten10.recruiterbox.com/jobs/fk03iaw'>
-    Lead SDET / Lead Software Developer in Test at Ten10
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
